SDKs/twilio.com/twilio_media_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateMediaProcessorRequest req = new CreateMediaProcessorRequest() {{
                security = new CreateMediaProcessorSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                request = new CreateMediaProcessorCreateMediaProcessorRequest() {{
                    extension = "sit";
                    extensionContext = "voluptas";
                    extensionEnvironment = "culpa";
                    maxDuration = 501233450539197794;
                    statusCallback = "consequuntur";
                    statusCallbackMethod = "PUT";
                }};
            }};

            CreateMediaProcessorResponse res = sdk.createMediaProcessor(req);

            if (res.mediaV1MediaProcessor.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createMediaProcessor`
* `createPlayerStreamer`
* `createPlayerStreamerPlaybackGrant`
* `deleteMediaRecording` - Deletes a MediaRecording resource identified by a SID.
* `fetchMediaProcessor` - Returns a single MediaProcessor resource identified by a SID.
* `fetchMediaRecording` - Returns a single MediaRecording resource identified by a SID.
* `fetchPlayerStreamer` - Returns a single PlayerStreamer resource identified by a SID.
* `fetchPlayerStreamerPlaybackGrant` - **This method is not enabled.** Returns a single PlaybackGrant resource identified by a SID.
* `listMediaProcessor` - Returns a list of MediaProcessors.
* `listMediaRecording` - Returns a list of MediaRecordings.
* `listPlayerStreamer` - Returns a list of PlayerStreamers.
* `updateMediaProcessor` - Updates a MediaProcessor resource identified by a SID.
* `updatePlayerStreamer` - Updates a PlayerStreamer resource identified by a SID.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
